--- a/geek-h5-react/src/assets/style/index.scss
+++ b/geek-h5-react/src/assets/style/index.scss
@@ -4,3 +4,15 @@
     list-style: none;
     box-sizing: border-box;
 }
+body {
+    color: #333;
+    font-size: 16px;
+    // font-family: ;
+    background-color: #fff;
+}
+.icon {
+    width: 1em; height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+ }
