--- a/geek-h5-react/src/assets/style/index.scss
+++ b/geek-h5-react/src/assets/style/index.scss
@@ -1,3 +1,5 @@
+// @import '@scss/hairline.scss';
+
 * {
     margin: 0;
     padding: 0;
@@ -10,9 +12,15 @@ body {
     // font-family: ;
     background-color: #fff;
 }
+input {
+    border: none;
+    &:focus-visible {
+        outline: none;
+    }
+}
 .icon {
     width: 1em; height: 1em;
     vertical-align: -0.15em;
     fill: currentColor;
     overflow: hidden;
- }
+}
