完成登录功能 06-04

--- a/geek-h5-react/src/assets/style/index.scss
+++ b/geek-h5-react/src/assets/style/index.scss
@@ -10,7 +10,7 @@ body {
     color: #333;
     font-size: 16px;
     // font-family: ;
-    background-color: #fff;
+    background-color: #fff !important;
 }
 input {
     border: none;
