--- a/geek-h5-react/src/assets/style/index.scss
+++ b/geek-h5-react/src/assets/style/index.scss
@@ -12,12 +12,35 @@ body {
     // font-family: ;
     background-color: #fff !important;
 }
+
+html,
+body,
+#root {
+    height: 100%;
+}
 input {
     border: none;
     background: none;
+    border: 0;
     &:focus-visible {
         outline: none;
     }
+}
+button {
+    display: block;
+    outline: 0 none;
+    padding: 0;
+    border-radius: 8px;
+    -webkit-appearance: none;
+    box-sizing: border-box;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+    white-space: nowrap;
+    color: #000;
+    background-color: #fff;
+    border: 0;
 }
 .icon {
     width: 1em; height: 1em;
