pref: 完善首页列表 07-12

--- a/src/components/Tabs/index.module.scss
+++ b/src/components/Tabs/index.module.scss
@@ -73,6 +73,9 @@
       padding-bottom: 50px;
       overflow: hidden;
 
+      .tabs-content-wrap {
+        height: 100%;
+      }
       .tab-pane {
         height: 100%;
       }
