feat: 新增文章评论 07-24

--- a/src/view/Article/index.module.scss
+++ b/src/view/Article/index.module.scss
@@ -1,9 +1,15 @@
 @import '@scss/hairline.scss';
 
 .root {
-  height: 100%;
-
+  // height: 100%;
+  padding-top: 46px;
   :global {
+    .navBar{
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 99;
+    }
     .root-wrapper {
       position: relative;
       display: flex;
