--- a/src/view/Article/index.module.scss
+++ b/src/view/Article/index.module.scss
@@ -1,8 +1,9 @@
 @import '@scss/hairline.scss';
 
 .root {
-  // height: 100%;
+  // height: 100vh;
   padding-top: 46px;
+  padding-bottom: 50px;
   :global {
     .navBar{
       position: fixed;
@@ -49,7 +50,7 @@
 
     .wrapper {
       flex: 1;
-      overflow-y: auto;
+      // overflow-y: auto;
       background-color: #f7f8fa;
     }
 
